--- a/styling.css
+++ b/styling.css
@@ -1,3 +1,34 @@
-.header-section{
+.headerholder{
 background-color: turquoise;
+padding: 70px;
+display:flex;
+justify-content: center;
+}
+.header{
+    background-color: pink;
+}
+.bodyholder{
+    background: black;
+    padding: 100px 50px 100px 50px;
+}
+.bodysectionholder{
+    background-color: green;
+    padding: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.bodysection{
+    background: red;
+    padding: 175px 500px 175px 175px;
+    margin: -100px;
+}
+.bodysection2{
+    background-color: bisque;
+    padding: 200px 125px 200px 125px;
+    margin: -100px;
+}
+.secondbodyholder{
+    background-color:lime;
+    padding: 200px;
 }
