--- a/subpages/subpagestyles.css
+++ b/subpages/subpagestyles.css
@@ -1,6 +1,6 @@
 .headerholder{
-    background-color: rgb(64, 109, 224);
-    padding: 30px;
+    background-color: turquoise;
+    padding: 50px;
     display:flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -8,10 +8,8 @@
 .firstheaderhalfholder{
     position: relative;
     display: inline-block;
-    justify-content: space-between;
-}
-.firstheaderhalfholder div{
-    margin: 0px 0px 0px 20px;
+    background-color: pink;
+    padding: 50px 150px 50px 150px;
 }
 .DDButton1{
     background-color: #04AA6D;
@@ -19,7 +17,6 @@
     padding: 16px;
     font-size: 16px;
     border: none;
-    margin: 0px 0px 0px 20px;
   }
 .dropdown1{
     position: relative;
@@ -29,13 +26,13 @@
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 107px;
+    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 .DDB1content a {
     color: black;
-    padding: 10px;
+    padding: 12px 16px;
     text-decoration: none;
     display: block;
   }
@@ -49,7 +46,7 @@
     background-color: #3e8e41;
 }
 .secondheaderhalfholder{
-    background-color: rgb(30, 172, 211);
+    background-color: blue;
     padding: 25px;
 }
 .bodyholder{
